src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Active</fullName>
        </values>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Holdover Initiated</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>New</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Termination In Progress</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AG_Number__c</fullName>
        <displayFormat>AG-{000000}</displayFormat>
        <label>AG Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Accepted_Syncing_Quote__c</fullName>
        <label>Accepted/Syncing Quote</label>
        <summaryFilterItems>
            <field>Quote.Status</field>
            <operation>equals</operation>
            <value>Accepted</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Quote.IsSyncing</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Accou__c</fullName>
        <formula>Contact__r.AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amendment_Id__c</fullName>
        <description>this is returned by Yardi in response</description>
        <label>Amendment Id</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Building_Name__c</fullName>
        <label>Building</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Park__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Business Park</label>
        <referenceTo>Business_Park__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>Contact.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOA_Discount__c</fullName>
        <label>DOA Discount</label>
        <summarizedField>Quote.DOA_Discount_Roll_Up_Summary__c</summarizedField>
        <summaryFilterItems>
            <field>Quote.IsSyncing</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Yet to begin</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expansion_Separate_Amendment_Terms__c</fullName>
        <label>Expansion Separate Amendment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <label>Combined Rates and Dates</label>
                </value>
                <value>
                    <fullName>-1</fullName>
                    <label>Separate Rates and Dates</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Framework_Detail__c</fullName>
        <label>Framework Detail</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Legal_Framework__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSE_Clearance_Date__c</fullName>
        <label>HSE Clearance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HSE_Notes__c</fullName>
        <label>HSE Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSE_Status__c</fullName>
        <label>HSE Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Applicable</fullName>
                </value>
                <value>
                    <fullName>Under Process</fullName>
                </value>
                <value>
                    <fullName>Approved with comments</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Created_From_Component__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Created From Component</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lease_End_Date__c</fullName>
        <label>Lease End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Start_Date__c</fullName>
        <label>Lease Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Type__c</fullName>
        <label>Lease Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>land</fullName>
                </value>
                <value>
                    <fullName>office</fullName>
                </value>
                <value>
                    <fullName>retail</fullName>
                </value>
                <value>
                    <fullName>str</fullName>
                </value>
                <value>
                    <fullName>annland</fullName>
                </value>
                <value>
                    <fullName>lhland</fullName>
                </value>
                <value>
                    <fullName>unitsale</fullName>
                </value>
                <value>
                    <fullName>cowork</fullName>
                </value>
                <value>
                    <fullName>PMLA</fullName>
                    <isActive>false</isActive>
                    <label>PMLA</label>
                </value>
                <value>
                    <fullName>PMS</fullName>
                    <isActive>false</isActive>
                    <label>PMS</label>
                </value>
                <value>
                    <fullName>TECOM</fullName>
                    <isActive>false</isActive>
                    <label>TECOM</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legal_Framework__c</fullName>
        <label>Legal Framework</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Freezone</fullName>
                </value>
                <value>
                    <fullName>Freelance</fullName>
                </value>
                <value>
                    <fullName>Branch UAE</fullName>
                </value>
                <value>
                    <fullName>Branch Foreign</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <label>License Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Values TBC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>No Budget / Lost Funding</fullName>
                </value>
                <value>
                    <fullName>No Decision / Non-Responsive</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <label>Opportunity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Renew</fullName>
                </value>
                <value>
                    <fullName>Modification</fullName>
                </value>
                <value>
                    <fullName>Contraction</fullName>
                    <isActive>false</isActive>
                    <label>Contraction</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Amendment_Id__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Parent Amendment Id</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposed_Booking_Expiry_Extension__c</fullName>
        <label>Proposed Booking Expiry Extension</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ROI_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retail_Sales_Category__c</fullName>
        <label>Retail Sales Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bakeries</fullName>
                </value>
                <value>
                    <fullName>Butcher</fullName>
                </value>
                <value>
                    <fullName>Seafood</fullName>
                </value>
                <value>
                    <fullName>Beer &amp; Wine</fullName>
                </value>
                <value>
                    <fullName>Groceries</fullName>
                </value>
                <value>
                    <fullName>Florists</fullName>
                </value>
                <value>
                    <fullName>Chocolates &amp; Confections</fullName>
                </value>
                <value>
                    <fullName>Delicatesse</fullName>
                </value>
                <value>
                    <fullName>Coffees Teas &amp; Drinks</fullName>
                </value>
                <value>
                    <fullName>Restaurants &amp; Pubs with Alcohol License</fullName>
                </value>
                <value>
                    <fullName>Takeaway &amp; Fast Food</fullName>
                </value>
                <value>
                    <fullName>Lounges</fullName>
                </value>
                <value>
                    <fullName>Ceramics and Pottery</fullName>
                </value>
                <value>
                    <fullName>Jewellery</fullName>
                </value>
                <value>
                    <fullName>Leather, Wool and Silk</fullName>
                </value>
                <value>
                    <fullName>Wood</fullName>
                </value>
                <value>
                    <fullName>Glass</fullName>
                </value>
                <value>
                    <fullName>Furniture</fullName>
                </value>
                <value>
                    <fullName>Sculpture</fullName>
                </value>
                <value>
                    <fullName>Printmaking</fullName>
                </value>
                <value>
                    <fullName>Painters</fullName>
                </value>
                <value>
                    <fullName>Galleries</fullName>
                </value>
                <value>
                    <fullName>Art Supplier</fullName>
                </value>
                <value>
                    <fullName>Theatres</fullName>
                </value>
                <value>
                    <fullName>Festivals</fullName>
                </value>
                <value>
                    <fullName>Bank</fullName>
                </value>
                <value>
                    <fullName>Activewear</fullName>
                </value>
                <value>
                    <fullName>Casualwear</fullName>
                </value>
                <value>
                    <fullName>Denim and Streetwear</fullName>
                </value>
                <value>
                    <fullName>General Fashion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Soft_Booking_Extension_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used as criteria for the soft booking extension approval process, button and flow.</description>
        <label>Soft Booking Extension Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StageNameBeforeTerminationCase__c</fullName>
        <label>StageNameBeforeTerminationCase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <label>Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Expansion</fullName>
                </value>
                <value>
                    <fullName>Downsize</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T_Code__c</fullName>
        <label>T Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Discount__c</fullName>
        <label>Total Discount</label>
        <summarizedField>Quote.Total_Discount__c</summarizedField>
        <summaryFilterItems>
            <field>Quote.IsSyncing</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Quotes__c</fullName>
        <description>Count the amount of quote records on an opportunity. To be used in a validation rule when progressing to Negotiation or Active stage.</description>
        <label>Total Quotes</label>
        <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yardi_Integration_Error_Message__c</fullName>
        <label>Yardi Integration Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yardi_Integration_Status__c</fullName>
        <label>Yardi Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Yardi_Lease_Status__c</fullName>
        <label>Yardi Lease Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>is_Merged_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Merged Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <booleanFilter>(1 OR 2)</booleanFilter>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Private</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.PRIVATE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Private</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>Land_Lease_Opportunity</fullName>
        <active>true</active>
        <businessProcess>Sales Process</businessProcess>
        <label>Land Lease Opportunity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Premise_Lease_Opportunity</fullName>
        <active>true</active>
        <businessProcess>Sales Process</businessProcess>
        <label>Premise Lease Opportunity</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Cant_change_Opportunity_Status_to_New</fullName>
        <active>true</active>
        <description>Once the stage has moved past &apos;New&apos;, this stage can&apos;t be selected again.</description>
        <errorConditionFormula>$Profile.Name &lt;&gt; &quot;Integration User Profile&quot;&amp;&amp;
$Profile.Name &lt;&gt; &quot;System Administrator&quot;&amp;&amp;  
ISPICKVAL(StageName, &quot;New&quot;)&amp;&amp;
ISCHANGED(StageName)</errorConditionFormula>
        <errorMessage>Opportunity can&apos;t be set to &apos;New&apos;, please create a new Opportunity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cant_reactivate_closed_lost</fullName>
        <active>true</active>
        <description>Once opportunity has been cancelled or closed lost, a new opportunity must be raised, this can not be reactivated</description>
        <errorConditionFormula>(ISPICKVAL(PRIORVALUE(StageName),&quot;Cancelled&quot;) || 
ISPICKVAL(PRIORVALUE(StageName),&quot;Closed Lost&quot;))&amp;&amp;
ISCHANGED(StageName)
&amp;&amp;
(ISPICKVAL(StageName, &quot;Active&quot;) || 
ISPICKVAL(StageName, &quot;Proposal/Price Quote&quot;) ||  
ISPICKVAL(StageName, &quot;Negotiation&quot;))
&amp;&amp;
$Profile.Name &lt;&gt; &quot;Integration User Profile&quot;&amp;&amp;
$Profile.Name &lt;&gt; &quot;System Administrator&quot;</errorConditionFormula>
        <errorMessage>Please raise a New Quote, this can&apos;t be reactivated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ExpansionSeparateAmendmentShouldNotBlank</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL(Type, &apos;Renewal&apos;), ISPICKVAL( Sub_Type__c , &apos;Expansion&apos;), ISPICKVAL( Expansion_Separate_Amendment_Terms__c, &quot;&quot; ))</errorConditionFormula>
        <errorDisplayField>Expansion_Separate_Amendment_Terms__c</errorDisplayField>
        <errorMessage>Expansion Separate Amendment Terms Should Not Blank for Renewal Expansion Opportunity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lease_End_Date_cannot_be_Lesser</fullName>
        <active>true</active>
        <description>Lease End Date cannot be less than the Lease Start Date</description>
        <errorConditionFormula>Lease_End_Date__c &lt; Lease_Start_Date__c</errorConditionFormula>
        <errorMessage>The Lease End Date cannot be lesser than the Lease Start Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Negotiation_OR_Active_Stage_Validation</fullName>
        <active>true</active>
        <description>Validation to check if there are any quotes on the Opportunity before user can move to Negotiation OR Active.</description>
        <errorConditionFormula>OR(
AND( Total_Quotes__c &lt;1,
ISPICKVAL( StageName, &quot;Negotiation&quot;)),
AND( Total_Quotes__c &lt;1,
ISPICKVAL( StageName, &quot;Active&quot;))
)</errorConditionFormula>
        <errorMessage>Please create a quote before you can progress this Opportunity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_End_Date_Change</fullName>
        <active>true</active>
        <description>Restrict to change end date for Amendment expansion opportunity.</description>
        <errorConditionFormula>AND( ISPICKVAL( Type , &apos;Amendment&apos;), ISPICKVAL( Sub_Type__c , &apos;Expansion&apos;), ISCHANGED( Lease_End_Date__c ))</errorConditionFormula>
        <errorMessage>Lease End Date can&apos;t be changed if Opportunity Type is Amendment and Sub-type is Expansion.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_User_to_Change_Type_Expansion</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(Is_Created_From_Component__c), NOT(ISPICKVAL( Type , &apos;Renewal&apos;)), OR(OR(AND(ISPICKVAL( Type , &apos;Amendment&apos;), ISCHANGED(Type)), AND(ISPICKVAL( Sub_Type__c , &apos;Expansion&apos;), ISCHANGED(Sub_Type__c))) , AND(ISNEW(), NOT(ISPICKVAL( Type , &apos;Renewal&apos;)),  OR(ISPICKVAL( Type , &apos;Amendment&apos;), ISPICKVAL( Sub_Type__c , &apos;Expansion&apos;)))))</errorConditionFormula>
        <errorMessage>You can&apos;t create an opportunity with type amendment, this must be created through relevant buttons</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Stage_Closed_Won_to_Active</fullName>
        <active>true</active>
        <description>Throws an error if the stage changes to any other stage from closed won other than active or cancelled.</description>
        <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &quot;Integration User Profile&quot;,
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
ISCHANGED(StageName),
ISPICKVAL(PRIORVALUE(StageName),&quot;Closed Won&quot;),
OR(ISPICKVAL(StageName, &quot;New&quot;),
ISPICKVAL(StageName, &quot;Proposal/Price Quote&quot;),
ISPICKVAL(StageName, &quot;Negotiation&quot;),
ISPICKVAL(StageName, &quot;Closed Lost&quot;))
)</errorConditionFormula>
        <errorMessage>A &apos;Closed Won&apos; Opportunity cannot be moved to this Stage.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sync_Quote_to_Opportunity</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &quot;Integration User Profile&quot;,
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
Accepted_Syncing_Quote__c = 0,
ISPICKVAL( StageName, &quot;Closed Won&quot;)
)</errorConditionFormula>
        <errorMessage>Your Quote has not been Synced to the Opportunity - Please Sync your Accepted Quote to the Opportunity before you Close Won the Opportunity.</errorMessage>
    </validationRules>
</CustomObject>